--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "25.0.10",
     "@types/react": "19.2.10",
+    "@types/react-dom": "18.2.20",
     "typescript": "5.9.3"
   }
 }
